--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>AluraBooks</h1>
-    
+    <header class="cabecalho">
+        <span class="cabecalho__menu-hamburguer"></span>
+        <img src="Logo.svg" alt="Logo da alurabooks">
+        <a href="#"><img src="Favoritos-1.svg" alt=""></a>
+        <a href="#"><img src="Compras.svg" alt=""></a>
+        <a href="#"><img src="Usuario.png" alt=""></a>
+    </header>
+
 </body>
 </html>
