--- a/index.html
+++ b/index.html
@@ -9,11 +9,36 @@
 </head>
 <body>
     <header class="cabecalho">
-        <span class="cabecalho__menu-hamburguer"></span>
-        <img src="Logo.svg" alt="Logo da alurabooks">
-        <a href="#"><img src="Favoritos-1.svg" alt=""></a>
-        <a href="#"><img src="Compras.svg" alt=""></a>
-        <a href="#"><img src="Usuario.png" alt=""></a>
+        <div class="container">
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
+        <span class="cabecalho__menu-hamburguer container__imagem"></span>
+    </label>
+        <ul class="lista-menu">
+        <li class="lista-menu_titulo">Categorias</li>
+        <li class="lista-menu_item">
+          <a href="#" class="lista-menu_link">Programação</a>
+        </li>
+        <li class="lista-menu_item">
+          <a href="#" class="lista-menu_link">Front-end</a>
+        </li>
+        <li class="lista-menu_item">
+          <a href="#" class="lista-menu_link">Infraestrutura</a>
+        </li>
+        <li class="lista-menu_item">
+          <a href="#" class="lista-menu_link">Business</a>
+        </li>
+        <li class="lista-menu_item">
+          <a href="#" class="lista-menu_link">Design & UX</a>
+        </li>
+      </ul>
+        <img src="Logo.svg" alt="Logo da alurabooks" class="container__imagem">
+    </div>
+    <div class="container">
+        <a href="#"><img src="Favoritos-1.svg" alt="Meus favoritos"  class="container__imagem"></a>
+        <a href="#"><img src="Compras.svg" alt="Carrinho de compras"  class="container__imagem"></a>
+        <a href="#"><img src="Usuario.png" alt="Meu perfil"  class="container__imagem"></a>
+    </div>
     </header>
 
 </body>
